docs/envoy/v1.17.0/_sources/api-v3/config/common/matcher/v3/matcher.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/common/matcher/v3/matcher.proto:

Unified Matcher API
===================


.. _envoy_v3_api_msg_config.common.matcher.v3.Matcher:

config.common.matcher.v3.Matcher
--------------------------------

`[config.common.matcher.v3.Matcher proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L27>`_

A matcher, which may traverse a matching tree in order to result in a match action.
During matching, the tree will be traversed until a match is found, or if no match
is found the action specified by the most specific on_no_match will be evaluated.
As an on_no_match might result in another matching tree being evaluated, this process
might repeat several times until the final OnMatch (or no match) is decided.

This API is a work in progress.

.. code-block:: json

  {
    "matcher_list": "{...}",
    "matcher_tree": "{...}",
    "on_no_match": "{...}"
  }

.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.matcher_list:

matcher_list
  (:ref:`config.common.matcher.v3.Matcher.MatcherList <envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList>`) A linear list of matchers to evaluate.
  
  
  
  Precisely one of :ref:`matcher_list <envoy_v3_api_field_config.common.matcher.v3.Matcher.matcher_list>`, :ref:`matcher_tree <envoy_v3_api_field_config.common.matcher.v3.Matcher.matcher_tree>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.matcher_tree:

matcher_tree
  (:ref:`config.common.matcher.v3.Matcher.MatcherTree <envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherTree>`) A match tree to evaluate.
  
  
  
  Precisely one of :ref:`matcher_list <envoy_v3_api_field_config.common.matcher.v3.Matcher.matcher_list>`, :ref:`matcher_tree <envoy_v3_api_field_config.common.matcher.v3.Matcher.matcher_tree>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.on_no_match:

on_no_match
  (:ref:`config.common.matcher.v3.Matcher.OnMatch <envoy_v3_api_msg_config.common.matcher.v3.Matcher.OnMatch>`) Optional OnMatch to use if the matcher failed.
  If specified, the OnMatch is used, and the matcher is considered
  to have matched.
  If not specified, the matcher is considered not to have matched.
  
  
.. _envoy_v3_api_msg_config.common.matcher.v3.Matcher.OnMatch:

config.common.matcher.v3.Matcher.OnMatch
----------------------------------------

`[config.common.matcher.v3.Matcher.OnMatch proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L29>`_

What to do if a match is successful.

.. code-block:: json

  {
    "matcher": "{...}",
    "action": "{...}"
  }

.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.OnMatch.matcher:

matcher
  (:ref:`config.common.matcher.v3.Matcher <envoy_v3_api_msg_config.common.matcher.v3.Matcher>`) Nested matcher to evaluate.
  If the nested matcher does not match and does not specify
  on_no_match, then this matcher is considered not to have
  matched, even if a predicate at this level or above returned
  true.
  
  
  
  Precisely one of :ref:`matcher <envoy_v3_api_field_config.common.matcher.v3.Matcher.OnMatch.matcher>`, :ref:`action <envoy_v3_api_field_config.common.matcher.v3.Matcher.OnMatch.action>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.OnMatch.action:

action
  (:ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`) Protocol-specific action to take.
  
  
  
  Precisely one of :ref:`matcher <envoy_v3_api_field_config.common.matcher.v3.Matcher.OnMatch.matcher>`, :ref:`action <envoy_v3_api_field_config.common.matcher.v3.Matcher.OnMatch.action>` must be set.
  


.. _envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList:

config.common.matcher.v3.Matcher.MatcherList
--------------------------------------------

`[config.common.matcher.v3.Matcher.MatcherList proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L48>`_

A linear list of field matchers.
The field matchers are evaluated in order, and the first match
wins.

.. code-block:: json

  {
    "matchers": []
  }

.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.matchers:

matchers
  (**repeated** :ref:`config.common.matcher.v3.Matcher.MatcherList.FieldMatcher <envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList.FieldMatcher>`, *REQUIRED*) A list of matchers. First match wins.
  
  
.. _envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList.Predicate:

config.common.matcher.v3.Matcher.MatcherList.Predicate
------------------------------------------------------

`[config.common.matcher.v3.Matcher.MatcherList.Predicate proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L50>`_

Predicate to determine if a match is successful.

.. code-block:: json

  {
    "single_predicate": "{...}",
    "or_matcher": "{...}",
    "and_matcher": "{...}"
  }

.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.single_predicate:

single_predicate
  (:ref:`config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate <envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate>`) A single predicate to evaluate.
  
  
  
  Precisely one of :ref:`single_predicate <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.single_predicate>`, :ref:`or_matcher <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.or_matcher>`, :ref:`and_matcher <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.and_matcher>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.or_matcher:

or_matcher
  (:ref:`config.common.matcher.v3.Matcher.MatcherList.Predicate.PredicateList <envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList.Predicate.PredicateList>`) A list of predicates to be OR-ed together.
  
  
  
  Precisely one of :ref:`single_predicate <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.single_predicate>`, :ref:`or_matcher <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.or_matcher>`, :ref:`and_matcher <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.and_matcher>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.and_matcher:

and_matcher
  (:ref:`config.common.matcher.v3.Matcher.MatcherList.Predicate.PredicateList <envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList.Predicate.PredicateList>`) A list of predicates to be AND-ed together.
  
  
  
  Precisely one of :ref:`single_predicate <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.single_predicate>`, :ref:`or_matcher <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.or_matcher>`, :ref:`and_matcher <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.and_matcher>` must be set.
  
.. _envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate:

config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate
----------------------------------------------------------------------

`[config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L52>`_

Predicate for a single input field.

.. code-block:: json

  {
    "input": "{...}",
    "value_match": "{...}",
    "custom_match": "{...}"
  }

.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate.input:

input
  (:ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`, *REQUIRED*) Protocol-specific specification of input field to match on.
  
  
.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate.value_match:

value_match
  (:ref:`type.matcher.v3.StringMatcher <envoy_v3_api_msg_type.matcher.v3.StringMatcher>`) Built-in string matcher.
  
  
  
  Precisely one of :ref:`value_match <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate.value_match>`, :ref:`custom_match <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate.custom_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate.custom_match:

custom_match
  (:ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`) Extension for custom matching logic.
  
  
  
  Precisely one of :ref:`value_match <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate.value_match>`, :ref:`custom_match <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.SinglePredicate.custom_match>` must be set.
  


.. _envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList.Predicate.PredicateList:

config.common.matcher.v3.Matcher.MatcherList.Predicate.PredicateList
--------------------------------------------------------------------

`[config.common.matcher.v3.Matcher.MatcherList.Predicate.PredicateList proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L68>`_

A list of two or more matchers. Used to allow using a list within a oneof.

.. code-block:: json

  {
    "predicate": []
  }

.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.Predicate.PredicateList.predicate:

predicate
  (**repeated** :ref:`config.common.matcher.v3.Matcher.MatcherList.Predicate <envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList.Predicate>`, *REQUIRED*) 
  



.. _envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList.FieldMatcher:

config.common.matcher.v3.Matcher.MatcherList.FieldMatcher
---------------------------------------------------------

`[config.common.matcher.v3.Matcher.MatcherList.FieldMatcher proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L87>`_

An individual matcher.

.. code-block:: json

  {
    "predicate": "{...}",
    "on_match": "{...}"
  }

.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.FieldMatcher.predicate:

predicate
  (:ref:`config.common.matcher.v3.Matcher.MatcherList.Predicate <envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherList.Predicate>`, *REQUIRED*) Determines if the match succeeds.
  
  
.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherList.FieldMatcher.on_match:

on_match
  (:ref:`config.common.matcher.v3.Matcher.OnMatch <envoy_v3_api_msg_config.common.matcher.v3.Matcher.OnMatch>`, *REQUIRED*) What to do if the match succeeds.
  
  



.. _envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherTree:

config.common.matcher.v3.Matcher.MatcherTree
--------------------------------------------

`[config.common.matcher.v3.Matcher.MatcherTree proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L99>`_


.. code-block:: json

  {
    "input": "{...}",
    "exact_match_map": "{...}",
    "prefix_match_map": "{...}",
    "custom_match": "{...}"
  }

.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.input:

input
  (:ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`, *REQUIRED*) Protocol-specific specification of input field to match on.
  
  
.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.exact_match_map:

exact_match_map
  (:ref:`config.common.matcher.v3.Matcher.MatcherTree.MatchMap <envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherTree.MatchMap>`) 
  Exact or prefix match maps in which to look up the input value.
  If the lookup succeeds, the match is considered successful, and
  the corresponding OnMatch is used.
  
  
  Precisely one of :ref:`exact_match_map <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.exact_match_map>`, :ref:`prefix_match_map <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.prefix_match_map>`, :ref:`custom_match <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.custom_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.prefix_match_map:

prefix_match_map
  (:ref:`config.common.matcher.v3.Matcher.MatcherTree.MatchMap <envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherTree.MatchMap>`) Longest matching prefix wins.
  
  Exact or prefix match maps in which to look up the input value.
  If the lookup succeeds, the match is considered successful, and
  the corresponding OnMatch is used.
  
  
  Precisely one of :ref:`exact_match_map <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.exact_match_map>`, :ref:`prefix_match_map <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.prefix_match_map>`, :ref:`custom_match <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.custom_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.custom_match:

custom_match
  (:ref:`config.core.v3.TypedExtensionConfig <envoy_v3_api_msg_config.core.v3.TypedExtensionConfig>`) Extension for custom matching logic.
  
  Exact or prefix match maps in which to look up the input value.
  If the lookup succeeds, the match is considered successful, and
  the corresponding OnMatch is used.
  
  
  Precisely one of :ref:`exact_match_map <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.exact_match_map>`, :ref:`prefix_match_map <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.prefix_match_map>`, :ref:`custom_match <envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.custom_match>` must be set.
  
.. _envoy_v3_api_msg_config.common.matcher.v3.Matcher.MatcherTree.MatchMap:

config.common.matcher.v3.Matcher.MatcherTree.MatchMap
-----------------------------------------------------

`[config.common.matcher.v3.Matcher.MatcherTree.MatchMap proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L101>`_

A map of configured matchers. Used to allow using a map within a oneof.

.. code-block:: json

  {
    "map": "{...}"
  }

.. _envoy_v3_api_field_config.common.matcher.v3.Matcher.MatcherTree.MatchMap.map:

map
  (**repeated** map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, :ref:`config.common.matcher.v3.Matcher.OnMatch <envoy_v3_api_msg_config.common.matcher.v3.Matcher.OnMatch>`>) 
  




.. _envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate:

config.common.matcher.v3.MatchPredicate
---------------------------------------

`[config.common.matcher.v3.MatchPredicate proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L144>`_

Match configuration. This is a recursive structure which allows complex nested match
configurations to be built using various logical operators.

.. code-block:: json

  {
    "or_match": "{...}",
    "and_match": "{...}",
    "not_match": "{...}",
    "any_match": "...",
    "http_request_headers_match": "{...}",
    "http_request_trailers_match": "{...}",
    "http_response_headers_match": "{...}",
    "http_response_trailers_match": "{...}",
    "http_request_generic_body_match": "{...}",
    "http_response_generic_body_match": "{...}"
  }

.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match:

or_match
  (:ref:`config.common.matcher.v3.MatchPredicate.MatchSet <envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate.MatchSet>`) A set that describes a logical OR. If any member of the set matches, the match configuration
  matches.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match:

and_match
  (:ref:`config.common.matcher.v3.MatchPredicate.MatchSet <envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate.MatchSet>`) A set that describes a logical AND. If all members of the set match, the match configuration
  matches.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match:

not_match
  (:ref:`config.common.matcher.v3.MatchPredicate <envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate>`) A negation match. The match configuration will match if the negated match condition matches.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match:

any_match
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The match configuration will always match.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match:

http_request_headers_match
  (:ref:`config.common.matcher.v3.HttpHeadersMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpHeadersMatch>`) HTTP request headers match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match:

http_request_trailers_match
  (:ref:`config.common.matcher.v3.HttpHeadersMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpHeadersMatch>`) HTTP request trailers match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match:

http_response_headers_match
  (:ref:`config.common.matcher.v3.HttpHeadersMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpHeadersMatch>`) HTTP response headers match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match:

http_response_trailers_match
  (:ref:`config.common.matcher.v3.HttpHeadersMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpHeadersMatch>`) HTTP response trailers match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match:

http_request_generic_body_match
  (:ref:`config.common.matcher.v3.HttpGenericBodyMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpGenericBodyMatch>`) HTTP request generic body match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match:

http_response_generic_body_match
  (:ref:`config.common.matcher.v3.HttpGenericBodyMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpGenericBodyMatch>`) HTTP response generic body match configuration.
  
  
  
  Precisely one of :ref:`or_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.or_match>`, :ref:`and_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.and_match>`, :ref:`not_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.not_match>`, :ref:`any_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.any_match>`, :ref:`http_request_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_headers_match>`, :ref:`http_request_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_trailers_match>`, :ref:`http_response_headers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_headers_match>`, :ref:`http_response_trailers_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_trailers_match>`, :ref:`http_request_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_request_generic_body_match>`, :ref:`http_response_generic_body_match <envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.http_response_generic_body_match>` must be set.
  
.. _envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate.MatchSet:

config.common.matcher.v3.MatchPredicate.MatchSet
------------------------------------------------

`[config.common.matcher.v3.MatchPredicate.MatchSet proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L146>`_

A set of match configurations used for logical operations.

.. code-block:: json

  {
    "rules": []
  }

.. _envoy_v3_api_field_config.common.matcher.v3.MatchPredicate.MatchSet.rules:

rules
  (**repeated** :ref:`config.common.matcher.v3.MatchPredicate <envoy_v3_api_msg_config.common.matcher.v3.MatchPredicate>`, *REQUIRED*) The list of rules that make up the set.
  
  



.. _envoy_v3_api_msg_config.common.matcher.v3.HttpHeadersMatch:

config.common.matcher.v3.HttpHeadersMatch
-----------------------------------------

`[config.common.matcher.v3.HttpHeadersMatch proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L189>`_

HTTP headers match configuration.

.. code-block:: json

  {
    "headers": []
  }

.. _envoy_v3_api_field_config.common.matcher.v3.HttpHeadersMatch.headers:

headers
  (**repeated** :ref:`config.route.v3.HeaderMatcher <envoy_v3_api_msg_config.route.v3.HeaderMatcher>`) HTTP headers to match.
  
  


.. _envoy_v3_api_msg_config.common.matcher.v3.HttpGenericBodyMatch:

config.common.matcher.v3.HttpGenericBodyMatch
---------------------------------------------

`[config.common.matcher.v3.HttpGenericBodyMatch proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L204>`_

HTTP generic body match configuration.
List of text strings and hex strings to be located in HTTP body.
All specified strings must be found in the HTTP body for positive match.
The search may be limited to specified number of bytes from the body start.

.. attention::

  Searching for patterns in HTTP body is potentially cpu intensive. For each specified pattern, http body is scanned byte by byte to find a match.
  If multiple patterns are specified, the process is repeated for each pattern. If location of a pattern is known, ``bytes_limit`` should be specified
  to scan only part of the http body.

.. code-block:: json

  {
    "bytes_limit": "...",
    "patterns": []
  }

.. _envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.bytes_limit:

bytes_limit
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Limits search to specified number of bytes - default zero (no limit - match entire captured buffer).
  
  
.. _envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.patterns:

patterns
  (**repeated** :ref:`config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch <envoy_v3_api_msg_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch>`, *REQUIRED*) List of patterns to match.
  
  
.. _envoy_v3_api_msg_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch:

config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch
--------------------------------------------------------------

`[config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch proto] <https://github.com/envoyproxy/envoy/blob/5c801b25cae04f06bf48248c90e87d623d7a6283/api/envoy/config/common/matcher/v3/matcher.proto#L205>`_


.. code-block:: json

  {
    "string_match": "...",
    "binary_match": "..."
  }

.. _envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.string_match:

string_match
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Text string to be located in HTTP body.
  
  
  
  Precisely one of :ref:`string_match <envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.string_match>`, :ref:`binary_match <envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.binary_match>` must be set.
  
.. _envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.binary_match:

binary_match
  (`bytes <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Sequence of bytes to be located in HTTP body.
  
  
  
  Precisely one of :ref:`string_match <envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.string_match>`, :ref:`binary_match <envoy_v3_api_field_config.common.matcher.v3.HttpGenericBodyMatch.GenericTextMatch.binary_match>` must be set.
  


